# EthicalHackingAssistant

./: .gitignore  ADVANCED_FEATURES_IMPLEMENTATION.md  BUILD_INSTALLERS.md  Cargo.toml  DESKTOP_APP_SUMMARY.md  EthicalHackingAssistant.spec  LICENSE  README.md  TERMINAL_SETUP.md  about.html  app.spec  build.py  build_installers.py  build_windows.bat  download.html  features.html  gui_main.py  index.html  installer_windows.iss  landing-page.html  main.py  package-lock.json  package.json  pricing.html  requirements.txt  run_app.sh  run_terminal.bat  run_terminal.ps1  run_tests.sh  server.js  settings.ini  setup.py  setup_windows.ps1  styles.css  support.html  terminal_profile.json  test.py
backend/: app.py  nmap_helper.py  oscp_resources.py  requirements.txt
backend/advanced_features/: ai_analyzer.py
backend/config/: enhanced_terminal_config.json
backend/core/: agent_registry.py  vulnerability_enrichment.py
backend/tests/: test_app.py
config/: default.toml  ui_config.yaml
core/: integration_and_audit.py  performance_terminal.py
docs/: CONTRIBUTING.md  README.md  USER_GUIDE.md
docs/agents/: README.md
examples/: ui_demo.py
frontend/: package.json
frontend/electron/: main.js
frontend/templates/: index.html
jules-scratch/verification/: verify_app.py
landing-page/: cancel.html  index-cyberpunk.html  index.html  script.js  styles-cyberpunk.css  styles-modern.css  styles.css  success.html
modern_gui/: README.md  advanced_features.py  app.py  ethical_hacking.db  nmap_helper.py  oscp_resources.py  package-lock.json  package.json  requirements.txt
(+27 files in other folders)
