[package]
name = "white_hat"
version = "0.1.0"
edition = "2021"
authors = ["User"]
description = "An AI-powered white hat hacking tool with web browsing capabilities"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
clap = { version = "4.4.18", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
pyo3 = { version = "0.20.2", features = ["extension-module"] }
anyhow = "1.0.79"
colored = "2.1.0"
